[package]
name = "ferrum_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
path = "backend/src/main.rs"
name = "ferrum_chat"
[workspace]
members = [
    "backend",
    "frontend",
    "common"
]